Fix unequal SVGs on the notifications and added better spacing between the closeContainer and other containers of the notifications

--- a/to-do-list/src/Notifications/Notifications.module.css
+++ b/to-do-list/src/Notifications/Notifications.module.css
@@ -104,7 +104,7 @@ This file is organized to match the component's JSX structure:
 /* Close Button */
 .closeContainer {
   padding-bottom: 0.4rem;
-  padding-left: 0.4rem;
+  margin-left: 0.5rem;
   display: flex;
   gap: 0.3rem;
 }
@@ -129,8 +129,8 @@ This file is organized to match the component's JSX structure:
 }
 
 .close-button > .close-image {
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
   fill: rgba(209, 209, 209, 0.87);
   transition: fill 0.3s ease;
 }
@@ -187,8 +187,8 @@ This file is organized to match the component's JSX structure:
 }
 
 .loader {
-  width: 80%;
-  height: 80%;
+  min-width: 70%;
+  min-height: 70%;
 }
 
 .loader-circle {
